force-app/main/default/objects/Reimbursement_Item__c/Reimbursement_Item__c.object-meta.xml
<CustomObject>
    <description>Budget element of an expense or stipend that is separately identified.</description>
    <label>Reimbursement Item</label>
    <nameField>
        <displayFormat>RI{00000000}</displayFormat>
        <label>Reimbursement Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>