force-app/main/default/objects/Reimbursement_Item__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the master-detail field for the accounting code object.</description>
    <inlineHelpText>In this field, search for and select the accounting code that is associated with this expense line item record.</inlineHelpText>
    <label>Accounting Code</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>Reimbursement Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>