force-app/main/default/objects/Reimbursement_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Captures the cost of the reimbursement item (excluding mileage).</description>
    <inlineHelpText>Enter the amount for this line item. If you&#39;re submitting a flat rate reimbursement, the following rules apply: $15, $25, or $35 for a Driver Safety Course, $35 (or less) for a Tax-Aide Assignment, or $50 (or less) for a Tax-Aide Supervisory Assignment.</inlineHelpText>
    <label>Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>