force-app/main/default/objects/Reimbursement_Item__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Captures date of the reimbursement item being attached to a reimbursement.</description>
    <inlineHelpText>Enter the date on which this expense was incurred.</inlineHelpText>
    <label>Date of the Expense</label>
    <type>Date</type>
</CustomField>