force-app/main/default/objects/Reimbursement_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Captures a desription of the line item.</description>
    <inlineHelpText>If necessary, provide additional details about this line item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>