force-app/main/default/objects/Reimbursement_Item__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <description>This is a master-detail lookup field to the reimbursement object.</description>
    <inlineHelpText>In this field, search for and select the reimbursement that is associated with this line item.</inlineHelpText>
    <label>Reimbursement</label>
    <referenceTo>Reimbursement__c</referenceTo>
    <relationshipLabel>Reimbursement Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>