force-app/main/default/objects/Reimbursement_Item__c/fields/Funding_Code__c.field-meta.xml
<CustomField>
    <fullName>Funding_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Code</label>
    <referenceTo>Funding_Code__c</referenceTo>
    <relationshipLabel>Reimbursement Items</relationshipLabel>
    <relationshipName>Reimbursement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>