force-app/main/default/objects/Reimbursement_Item__c/fields/Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Amount__c</fullName>
    <description>Captures the amount of the line item that will be counted towards the total reimbursement.</description>
    <formula>Mileage_Amount__c +  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will auto-populate with the amount from this line item that will be added towards the related reimbursement.</inlineHelpText>
    <label>Line Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>