force-app/main/default/objects/Reimbursement_Item__c/fields/Mileage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Amount__c</fullName>
    <description>Captures the total amount of reimbursement as it relates to mileage.</description>
    <formula>Miles__c *  Mileage_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will automatically populate with the cost of mileage for this line item.</inlineHelpText>
    <label>Mileage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>