force-app/main/default/objects/Reimbursement_Item__c/fields/Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Rate__c</fullName>
    <description>Captures the mileage rate requested by the volunteer for reimbursement.</description>
    <inlineHelpText>This is the mileage rate (in dollars per mile) you will receive on your reimbursement. If you would like to receive a lower rate than  shown, you can edit this field and lower the rate.</inlineHelpText>
    <label>Mileage Rate</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>