force-app/main/default/objects/Reimbursement_Item__c/fields/Miles__c.field-meta.xml
<CustomField>
    <fullName>Miles__c</fullName>
    <description>Captures the number of miles being submitted on the reimbursement item record.</description>
    <inlineHelpText>Enter the number of miles traveled in association with your work with AARP Volunteer Programs.</inlineHelpText>
    <label>Miles</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>