force-app/main/default/objects/Reimbursement_Item__c/fields/PeopleSoft_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Accounting_Code__c</fullName>
    <description>At the time of reimbursement approval, captures the complete PeopleSoft Accounting Code for a line item.</description>
    <label>PeopleSoft Accounting Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>