force-app/main/default/objects/Reimbursement_Item__c/fields/PeopleSoft_Expense_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Expense_Type_Code__c</fullName>
    <formula>Accounting_Code__r.PeopleSoft_Expense_Type_Code__c</formula>
    <label>PeopleSoft Expense Type Code</label>
    <type>Text</type>
</CustomField>