force-app/main/default/objects/Reimbursement_Item__c/fields/PeopleSoft_Funding_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Funding_Code__c</fullName>
    <inlineHelpText>At the time of reimbursement approval, captures the complete PeopleSoft Funding Code for a line item.</inlineHelpText>
    <label>PeopleSoft Funding Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>