force-app/main/default/objects/Reimbursement_Item__c/validationRules/Expense_Type_for_Flat_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Type_for_Flat_Rate</fullName>
    <active>true</active>
    <description>In order to save a flat rate expense, the user must select the correct expense type for their program.</description>
    <errorConditionFormula>AND(
 Expense__r.Assignment__r.Position__r.Program__r.Branding_Descriptor__c = &quot;Driver Safety&quot;,
 ISPICKVAL(Expense__r.Reimbursement_Type__c, &quot;Flat Rate&quot;),
 Accounting_Code__r.Expense_Type__c &lt;&gt; &quot;Smart Driver Course&quot;
)</errorConditionFormula>
    <errorMessage>If you are requesting a flat rate reimbursement, you must select Smart Driver Course in the Expense Type field.</errorMessage>
</ValidationRule>