force-app/main/default/objects/Reimbursement_Item__c/validationRules/Mileage_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mileage_Rate_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
    NOT(ISBLANK(Miles__c)),
    ISBLANK(Mileage_Rate__c)
  ),
  AND(
    NOT(ISBLANK(Mileage_Rate__c)),
    ISBLANK(Miles__c)
  )
)</errorConditionFormula>
    <errorMessage>A mileage line item cannot be saved unless the mileage distance is specified as well as the mileage rate.</errorMessage>
</ValidationRule>