force-app/main/default/objects/Reimbursement_Item__c/validationRules/No_0_Dollar_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>No_0_Dollar_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c == 0</errorConditionFormula>
    <errorMessage>A line item cannot be saved with a 0$ amount.</errorMessage>
</ValidationRule>