force-app/main/default/objects/Reimbursement_Item__c/validationRules/No_0_Miles.validationRule-meta.xml
<ValidationRule>
    <fullName>No_0_Miles</fullName>
    <active>true</active>
    <errorConditionFormula>Miles__c == 0</errorConditionFormula>
    <errorMessage>A line item cannot be saved with 0 miles.</errorMessage>
</ValidationRule>