force-app/main/default/objects/Reimbursement_Item__c/validationRules/Prevent_Negative_Line_Item_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Line_Item_Amount</fullName>
    <active>true</active>
    <description>Prevents users from entering negative values on miles or amount.</description>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(Amount__c)),
Amount__c &lt;= 0),
AND(
NOT(ISBLANK(Miles__c )),
Miles__c  &lt;= 0)
)</errorConditionFormula>
    <errorMessage>You must enter a positive number for miles (if requesting mileage) or amount (if requesting non-mileage). If you are  entering a negative value because you need to refund money to your program, please contact your supervisor or an AARP Staff Member.</errorMessage>
</ValidationRule>