force-app/main/default/objects/Reimbursement_Item__c/validationRules/Require_Accounting_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Accounting_Code</fullName>
    <active>true</active>
    <description>Requires Program Code and Expense Type values prior to saving a reimbursement item.</description>
    <errorConditionFormula>ISBLANK(Accounting_Code__c)</errorConditionFormula>
    <errorMessage>Please select a Program Code and Expense Type prior to saving this line item.</errorMessage>
</ValidationRule>