force-app/main/default/objects/Reimbursement_Item__c/validationRules/Require_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Amount</fullName>
    <active>true</active>
    <description>Requires an amount to be included on a line item.</description>
    <errorConditionFormula>AND(
 ISBLANK( Amount__c ),
 ISBLANK( Miles__c ) 
)</errorConditionFormula>
    <errorMessage>In order to save a line item, you must include a line item amount or add the number of miles driven.</errorMessage>
</ValidationRule>