force-app/main/default/objects/Reimbursement_Item__c/validationRules/Smart_Driver_Course_Needs_DS_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Smart_Driver_Course_Needs_DS_Course</fullName>
    <active>true</active>
    <description>Prevents a reimbursement with Expense Type &quot;Smart Driver Course&quot; from being submitted unless the Funding Code is &quot;Driver Safety - Course&quot;</description>
    <errorConditionFormula>(Accounting_Code__r.PeopleSoft_Expense_Type__c  = &#39;Smart Driver Course&#39; ||  CONTAINS(Accounting_Code__r.Name, &#39;Smart Driver C&#39;) ||  Accounting_Code__r.Expense_Type__c = &#39;Smart Driver Course&#39;) &amp;&amp; Funding_Code__r.Name != &#39;Driver Safety - Course&#39;</errorConditionFormula>
    <errorDisplayField>Funding_Code__c</errorDisplayField>
    <errorMessage>Expense Type &#39;Smart Driver Course&#39; can be used only when the Funding Code selected is &#39;Driver Safety - Course&#39;</errorMessage>
</ValidationRule>